--- a/index.html
+++ b/index.html
@@ -295,6 +295,20 @@
     pointer-events:none;
     user-select:none;
   }
+
+  /* Backup buttons */
+  .admin-btn{
+    padding:10px 16px;
+    border:none;
+    border-radius:12px;
+    font-weight:800;
+    cursor:pointer;
+    transition:0.2s;
+    color:white;
+  }
+  .admin-btn:hover{ opacity:0.88; }
+  .green-btn{ background:#22c55e; }
+  .blue-btn{ background:#3b82f6; }
 </style>
 </head>
 
@@ -412,9 +426,26 @@
             <button class="danger" id="adminLock">Lock</button>
           </div>
 
-          <div class="help">
-            Note: This PIN protects inside the app. If someone can edit your files / browser storage, they can bypass it.
+          <!-- Backup section (jos) -->
+          <hr style="margin:20px 0; opacity:0.2;">
+
+          <div>
+            <div class="label" style="font-size:14px;">Backup & Restore</div>
+            <div class="help" style="margin-top:6px;">
+              Exportă datele înainte de <b>Clear data</b> / reset. După, faci Import și îți revine tot.
+            </div>
+
+            <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top:12px;">
+              <button id="btnExport" class="admin-btn green-btn" type="button">Export Backup</button>
+              <button id="btnImport" class="admin-btn blue-btn" type="button">Import Backup</button>
+              <input type="file" id="importFile" accept=".json" style="display:none;">
+            </div>
+
+            <div class="help" style="margin-top:10px;">
+              Fișierul se numește: <b>shiftpay-backup.json</b>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -950,6 +981,67 @@
     hideAdmin();
   });
 
+  // ===== BACKUP & RESTORE =====
+  function exportData(){
+    const backup = {};
+    for (let i = 0; i < localStorage.length; i++){
+      const k = localStorage.key(i);
+      backup[k] = localStorage.getItem(k);
+    }
+    const blob = new Blob([JSON.stringify(backup)], { type: "application/json" });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = "shiftpay-backup.json";
+    a.click();
+    URL.revokeObjectURL(url);
+    alert("Backup exportat ✅");
+  }
+
+  function importDataFromFile(file){
+    const reader = new FileReader();
+    reader.onload = (event) => {
+      let data;
+      try {
+        data = JSON.parse(event.target.result);
+      } catch (e) {
+        alert("Fișier invalid (nu e JSON).");
+        return;
+      }
+
+      for (const key in data){
+        localStorage.setItem(key, data[key]);
+      }
+
+      alert("Backup importat ✅ (aplicația se reîncarcă)");
+      location.reload();
+    };
+    reader.readAsText(file);
+  }
+
+  // Bind buttons when DOM is ready
+  document.addEventListener("DOMContentLoaded", () => {
+    const btnExport = document.getElementById("btnExport");
+    const btnImport = document.getElementById("btnImport");
+    const importFile = document.getElementById("importFile");
+
+    if(btnExport) btnExport.addEventListener("click", exportData);
+
+    if(btnImport && importFile){
+      btnImport.addEventListener("click", () => importFile.click());
+      importFile.addEventListener("change", (e) => {
+        const file = e.target.files && e.target.files[0];
+        if(!file) return;
+
+        // Optional confirm
+        const ok = confirm("Importul va suprascrie datele curente. Continuăm?");
+        if(!ok) { importFile.value = ""; return; }
+
+        importDataFromFile(file);
+      });
+    }
+  });
+
   // start
   refreshMetaAndRates();
   (async () => {
@@ -967,4 +1059,3 @@
 
 </body>
 </html>
-
