--- a/index.html
+++ b/index.html
@@ -1111,8 +1111,38 @@ window.addEventListener("blur", scheduleLock);
   }
 </script>
 
+<div id="updateBar" style="
+  position: fixed;
+  left: 12px;
+  right: 12px;
+  bottom: 12px;
+  z-index: 99999;
+  display: none;
+  gap: 10px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 14px;
+  border-radius: 14px;
+  border: 1px solid rgba(255,255,255,0.18);
+  background: rgba(0,0,0,0.55);
+  backdrop-filter: blur(12px);
+  color: rgba(255,255,255,0.92);
+  box-shadow: 0 12px 40px rgba(0,0,0,0.45);
+">
+  <div style="font-weight: 800;">Update available</div>
+  <button id="btnUpdateNow" style="
+    padding: 10px 14px;
+    border-radius: 12px;
+    border: 0;
+    background: #22c55e;
+    color: white;
+    font-weight: 900;
+    cursor: pointer;
+  ">Update</button>
+</div>
 </body>
 </html>
+
 
 
 
