--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@
 
     <div class="topbar">
       <div>
-        <h1 id="title">Month</h1>
-        <div class="meta" id="todayLine"></div>
-        <div class="meta" id="metaLine">
+  <div class="meta" id="todayLine" style="font-weight:700; font-size:14px;"></div>
+  <h1 id="title">Month</h1>
+  <div class="meta" id="metaLine">
           <b>Name:</b> Robert Bodo &nbsp;&nbsp; <b>Company:</b> R - DVS
         </div>
       </div>
@@ -1138,3 +1138,4 @@
 
 </body>
 </html>
+
