--- a/index.html
+++ b/index.html
@@ -174,6 +174,56 @@
   .fieldcol{ width:90px; }
   .nightcol{ width:160px; font-variant-numeric:tabular-nums; font-weight:900; }
 
+  /* Date formatting: always 2 lines + colored weekday + weekend red + today highlight */
+  .date-wrap{
+    display:flex;
+    flex-direction:column;
+    gap:3px;
+    line-height:1.05;
+  }
+  .date-top{
+    display:flex;
+    align-items:center;
+    gap:8px;
+  }
+  .date-number{
+    font-weight:950;
+    font-size:15px;
+    letter-spacing:0.02em;
+  }
+  .date-weekday{
+    font-size:12px;
+    font-weight:800;
+    letter-spacing:0.01em;
+    color:#93c5fd;        /* weekday blue-ish */
+    opacity:0.9;
+  }
+  .is-weekend .date-weekday{
+    color:#ff4d4d;        /* weekend red */
+    opacity:0.95;
+  }
+  .is-today{
+    background:rgba(34,197,94,0.14);
+    box-shadow:0 0 10px rgba(34,197,94,0.40);
+    border-radius:12px;
+  }
+  .today-bolt{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    width:18px;
+    height:18px;
+    border-radius:999px;
+    background:rgba(34,197,94,0.22);
+    border:1px solid rgba(34,197,94,0.45);
+    box-shadow:0 0 10px rgba(34,197,94,0.35);
+  }
+  .today-bolt svg{
+    width:12px;
+    height:12px;
+    fill:rgba(34,197,94,0.95);
+  }
+
   input[type="time"]{
     width:120px;
     padding:8px 10px;
@@ -329,28 +379,26 @@
   <div class="modal">
     <div class="modalHeader">
       <div class="meme" aria-hidden="true">
-        <!-- Electrician getting zapped (minimal) -->
+        <!-- Electrician doing X (minimal icon) -->
         <svg viewBox="0 0 120 120" width="84" height="84">
           <defs>
-            <linearGradient id="eg4" x1="0" x2="1" y1="0" y2="1">
-              <stop offset="0" stop-color="#3b82f6" stop-opacity="0.9"/>
-              <stop offset="1" stop-color="#22c55e" stop-opacity="0.85"/>
+            <linearGradient id="eg4x" x1="0" x2="1" y1="0" y2="1">
+              <stop offset="0" stop-color="#7c3aed" stop-opacity="0.75"/>
+              <stop offset="1" stop-color="#3b82f6" stop-opacity="0.7"/>
             </linearGradient>
           </defs>
-          <rect x="6" y="6" width="108" height="108" rx="22" fill="url(#eg4)" opacity="0.22"/>
+          <rect x="6" y="6" width="108" height="108" rx="22" fill="url(#eg4x)" opacity="0.22"/>
           <rect x="14" y="14" width="92" height="92" rx="18" fill="rgba(255,255,255,0.06)" stroke="rgba(255,255,255,0.18)"/>
-          <path d="M70 18 L50 56 H64 L48 100 L74 58 H60 Z" fill="rgba(255,255,255,0.95)" opacity="0.9"/>
-          <circle cx="44" cy="52" r="13" fill="rgba(255,255,255,0.20)" stroke="rgba(255,255,255,0.55)" stroke-width="3"/>
-          <path d="M31 52 Q44 38 57 52" fill="rgba(255,255,255,0.22)" stroke="rgba(255,255,255,0.55)" stroke-width="3" stroke-linecap="round"/>
-          <path d="M36 44 H52" stroke="rgba(255,255,255,0.55)" stroke-width="3" stroke-linecap="round"/>
-          <circle cx="39" cy="52" r="2.5" fill="#fff"/>
-          <circle cx="49" cy="52" r="2.5" fill="#fff"/>
-          <path d="M41 59 Q44 63 47 59" stroke="#fff" stroke-width="3" fill="none" stroke-linecap="round"/>
-          <path d="M30 88 Q44 74 58 88" fill="rgba(255,255,255,0.18)" stroke="rgba(255,255,255,0.55)" stroke-width="3" stroke-linecap="round"/>
-          <path d="M32 74 L20 64" stroke="rgba(255,255,255,0.65)" stroke-width="3" stroke-linecap="round"/>
-          <path d="M56 74 L68 64" stroke="rgba(255,255,255,0.65)" stroke-width="3" stroke-linecap="round"/>
-          <path d="M22 50 L18 46 M24 46 L20 42 M28 44 L24 40" stroke="rgba(255,255,255,0.85)" stroke-width="2" stroke-linecap="round"/>
-          <path d="M62 46 L66 42 M58 44 L62 40" stroke="rgba(255,255,255,0.85)" stroke-width="2" stroke-linecap="round"/>
+          <!-- Helmet/head -->
+          <circle cx="60" cy="44" r="12" fill="rgba(255,255,255,0.20)" stroke="rgba(255,255,255,0.60)" stroke-width="3"/>
+          <path d="M48 44 Q60 32 72 44" fill="rgba(255,255,255,0.22)" stroke="rgba(255,255,255,0.60)" stroke-width="3" stroke-linecap="round"/>
+          <!-- Body -->
+          <path d="M42 90 Q60 70 78 90" fill="rgba(255,255,255,0.16)" stroke="rgba(255,255,255,0.55)" stroke-width="3" stroke-linecap="round"/>
+          <!-- Arms crossed (X) -->
+          <path d="M36 64 L84 86" stroke="rgba(255,255,255,0.92)" stroke-width="6" stroke-linecap="round"/>
+          <path d="M84 64 L36 86" stroke="rgba(255,255,255,0.92)" stroke-width="6" stroke-linecap="round"/>
+          <!-- Small lightning -->
+          <path d="M70 20 L55 50 H66 L53 86 L79 52 H67 Z" fill="rgba(255,255,255,0.88)" opacity="0.9"/>
         </svg>
       </div>
       <div>
@@ -471,9 +519,9 @@
 
     <div class="topbar">
       <div>
-  <div class="meta" id="todayLine" style="font-weight:700; font-size:14px;"></div>
-  <h1 id="title">Month</h1>
-  <div class="meta" id="metaLine">
+        <div class="meta" id="todayLine" style="font-weight:700; font-size:14px;"></div>
+        <h1 id="title">Month</h1>
+        <div class="meta" id="metaLine">
           <b>Name:</b> Robert Bodo &nbsp;&nbsp; <b>Company:</b> R - DVS
         </div>
       </div>
@@ -731,6 +779,12 @@
     document.getElementById("grandTotal").textContent = money(grand);
   }
 
+  function isSameYMD(a, b){
+    return a.getFullYear() === b.getFullYear() &&
+           a.getMonth() === b.getMonth() &&
+           a.getDate() === b.getDate();
+  }
+
   function renderMonth(){
     const monthIndex = Number(monthSelect.value);
     const year = CURRENT_YEAR;
@@ -769,16 +823,50 @@
     const dmax = daysInMonth(year, monthIndex);
     const mm = pad2(monthIndex + 1);
 
+    const today = new Date();
+
     for(let d=1; d<=dmax; d++){
       const date = new Date(year, monthIndex, d);
       const weekday = date.toLocaleDateString("en-GB", { weekday: "long" });
-      const dateText = `${pad2(d)}.${mm} (${weekday})`;
+      const dow = date.getDay(); // 0 Sun, 6 Sat
 
       const tr = document.createElement("tr");
 
+      if(isSameYMD(date, today)) tr.classList.add("is-today");
+
       const tdDate = document.createElement("td");
       tdDate.className = "datecol";
-      tdDate.textContent = dateText;
+
+      const wrap = document.createElement("div");
+      wrap.className = "date-wrap";
+
+      const top = document.createElement("div");
+      top.className = "date-top";
+
+      const dn = document.createElement("div");
+      dn.className = "date-number";
+      dn.textContent = `${pad2(d)}.${mm}`;
+
+      top.appendChild(dn);
+
+      if(isSameYMD(date, today)){
+        const bolt = document.createElement("span");
+        bolt.className = "today-bolt";
+        bolt.innerHTML = '<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M13 2L3 14h7l-1 8 12-14h-7l-1-6z"/></svg>';
+        top.appendChild(bolt);
+      }
+
+      const dw = document.createElement("div");
+      dw.className = "date-weekday";
+      dw.textContent = weekday;
+
+      if(dow === 0 || dow === 6){
+        tr.classList.add("is-weekend");
+      }
+
+      wrap.appendChild(top);
+      wrap.appendChild(dw);
+      tdDate.appendChild(wrap);
       tr.appendChild(tdDate);
 
       const tdEnd = document.createElement("td");
@@ -1138,4 +1226,3 @@
 
 </body>
 </html>
-
